--- a/prod-pickup.html
+++ b/prod-pickup.html
@@ -4,29 +4,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#00AAC1">
+    <meta name="msapplication-TileImage" content="assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#00AAC1">
+
     <title>SalvadorCar | Seu carro novo está aqui</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/d333ca2c00.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <!-- Cabeçalho da Página Web -->
     <header>
         <nav>
+            <div class="toggle-menu" onclick="toggleMenu('open')">
+                <i class="fa-solid fa-bars fa-2xl"></i>
+            </div>
             <div class="logo">
                 <a href="index.html"><img src="assets/SalvadorCar.svg" alt=""></a>
             </div>
-            <menu>
+            <menu id="menu">
                 <a href="index.html">Início</a>
                 <a href="produtos.html">Produtos</a>
                 <a href="servicos.html">Serviços</a>
                 <a href="contato.html">Contato</a>
             </menu>
             <menu class="social">
-                <a href="#">Instagram</a>
-                <a href="#">X Twitter</a>
-                <a href="#">YouTube</a>
+                <a href="#">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-x-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
             </menu>
         </nav>
+        <div class="breadcrumb">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="produtos.html">Produtos</a></li>
+                    <li>Pick-up</li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <!-- Conteúdo Principal do Site -->
     <main>
@@ -37,21 +75,38 @@
                     <img src="assets/pickup-azul.webp" alt="">
                 </div>
                 <div class="prod-info pickup">
-                    <h2>Uma 4x4 forte com motor 3.6l</h2>
-                    <h3>Disponível na cores:</h3>
-                    <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                    </ul>
-                    <a href="#">Comprar</a>
+                    <div>
+                        <h2>Uma 4x4 forte com motor 3.6l</h2>
+                    </div>
+                    <div>
+                        <h3>Disponível na cores:</h3>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                        <a href="#">Comprar</a>
+                    </div>
+
+
                 </div>
             </div>
         </section>
     </main>
     <!-- Rodapé do Site -->
     <footer>
+        <ul class="social">
+            <a href="#">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-x-twitter"></i>
+            </a>
+            <a href="#">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+        </ul>
         <p>&copy;2024. SalvadorCar. Todos os Direitos Reservados.</p>
     </footer>
 </body>
