--- a/prod-pickup.html
+++ b/prod-pickup.html
@@ -26,6 +26,7 @@
     <title>SalvadorCar | Seu carro novo está aqui</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/d333ca2c00.js" crossorigin="anonymous"></script>
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
@@ -72,7 +73,7 @@
             <h1>Da terra ao asfalto com o melhor rendimento</h1>
             <div class="prod-det">
                 <div class="prod-foto">
-                    <img src="assets/pickup-azul.webp" alt="">
+                    <img src="assets/pickup-azul.webp" alt="" id="foto">
                 </div>
                 <div class="prod-info pickup">
                     <div>
@@ -81,10 +82,10 @@
                     <div>
                         <h3>Disponível na cores:</h3>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li onclick="trocaFoto('pickup-azul')"></li>
+                            <li onclick="trocaFoto('pickup-branca')"></li>
+                            <li onclick="trocaFoto('pickup-lilas')"></li>
+                            <li onclick="trocaFoto('pickup-vermelha')"></li>
                         </ul>
                         <a href="#">Comprar</a>
                     </div>
