--- a/prod-carro.html
+++ b/prod-carro.html
@@ -33,28 +33,32 @@
     <!-- Cabeçalho da Página Web -->
     <header>
         <nav>
-            <div class="toggle-menu" onclick="toggleMenu('open')">
-                <i class="fa-solid fa-bars fa-2xl"></i>
-            </div>
+            <button id="btnMenu">
+                <span class="line"></span>
+                <span class="line"></span>
+                <span class="line"></span>
+            </button>
             <div class="logo">
                 <a href="index.html"><img src="assets/SalvadorCar.svg" alt=""></a>
             </div>
-            <menu id="menu">
-                <a href="index.html">Início</a>
-                <a href="produtos.html">Produtos</a>
-                <a href="servicos.html">Serviços</a>
-                <a href="contato.html">Contato</a>
-            </menu>
-            <menu class="social">
-                <a href="#">
-                    <i class="fa-brands fa-instagram"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-x-twitter"></i>
-                </a>
-                <a href="#">
-                    <i class="fa-brands fa-youtube"></i>
-                </a>
+            <menu id="mainMenu" class="oculta">
+                <div class="main-menu">
+                    <a href="index.html">Início</a>
+                    <a href="produtos.html">Produtos</a>
+                    <a href="servicos.html">Serviços</a>
+                    <a href="contato.html">Contato</a>
+                </div>
+                <div class="social-menu">
+                    <a href="#">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </div>
             </menu>
         </nav>
         <div class="breadcrumb">
